@@ -1,9 +1,10 @@
 package com.buy01.user.infrastructure.security;
 
-import java.util.Collections;
+import java.util.List;
 import java.util.UUID;
 
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
@@ -26,34 +27,39 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
     }
 
     @Override
-    protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, 
+    protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response,
             FilterChain filterChain) throws ServletException, java.io.IOException {
-        
+
         String authHeader = request.getHeader("Authorization");
-        
+
         if (authHeader != null && authHeader.startsWith("Bearer ")) {
             String token = authHeader.substring(7);
-            
+
             try {
                 if (tokenGenerator.validateToken(token)) {
                     String email = tokenGenerator.extractEmail(token);
                     UUID userId = tokenGenerator.extractUserId(token);
                     Role role = tokenGenerator.extractRole(token);
-                    
+
                     UserPrincipal principal = new UserPrincipal(userId, email, role);
-                    
-                    UsernamePasswordAuthenticationToken authentication = 
-                            new UsernamePasswordAuthenticationToken(principal, null, Collections.emptyList());
-                    
+
+                    // Map role to Spring Security authority
+                    var authorities = List.of(new SimpleGrantedAuthority("ROLE_" + role.toString().toUpperCase()));
+
+                    UsernamePasswordAuthenticationToken authentication
+                            = new UsernamePasswordAuthenticationToken(principal, null, authorities);
+
                     SecurityContextHolder.getContext().setAuthentication(authentication);
                 }
             } catch (Exception e) {
                 // Token validation failed, continue without authentication
             }
         }
-        
+
         filterChain.doFilter(request, response);
     }
-    
-    public record UserPrincipal(UUID id, String email, Role role) {}
+
+    public record UserPrincipal(UUID id, String email, Role role) {
+
+    }
 }
